--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   get_it: ^8.0.3
   google_fonts: ^6.2.1
   dio: ^5.8.0+1
+  animate_do: ^3.3.9
+  cached_network_image: ^3.4.1
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/937449.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
