--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   animate_do: ^3.3.9
   cached_network_image: ^3.4.1
   fl_chart: ^0.70.2
+  auto_size_text: ^3.0.0
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
