--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fl_chart: ^0.70.2
   auto_size_text: ^3.0.0
   animated_splash_screen: ^1.3.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/937449.png
+  - assets/lottiefiles/Animation - 1739746455594.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
